Add directions to demo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         crossorigin="anonymous"></script>
     </head>
     <body>
+        <div id="directions">
+            Click a "person" (dot) to select them. <br>
+            Click again to move them to a new location. <br>
+            Note that people can collide with each other.
+        </div>
         <canvas id="game" height="800px" width="800px"></canvas>
         <script src="index.js"></script>
     </body>
