Groundwork for buildings and roads

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         crossorigin="anonymous"></script>
     </head>
     <body>
-        <div id="directions">
+        <div id="directions" hidden>
             Click a "person" (dot) to select them. <br>
             Click again to move them to a new location. <br>
             Note that people can collide with each other.
